# data-morphosyntax

./: morphosyntax.cabal
Data/: Morphosyntax.hs
Data/Morphosyntax/: Base.hs  Canonical.hs  Class.hs  Compare.hs  Raw.hs  Sync.hs  Tagset.hs
Text/Morphosyntax/: Plain.hs  Tag.hs  Tagset.hs  TeiNCP.hs
examples/: AccuracyLB.hs  StrongLB.hs  StrongUB.hs  Sync.hs  WeakAccuracyLB.hs  WeakLB.hs  WeakUB.hs  tei2plain.hs
