Name:               morphosyntax
Version:            0.0.1.1
Synopsis:           Morphosyntax layer
License:            BSD3
License-file:       LICENSE
Author:             Jakub Waszczuk
Maintainer:         waszczuk.kuba@gmail.com
Build-type:         Simple
Exposed-modules:    Data.Morphosyntax
                    Data.Morphosyntax.Base
                    Data.Morphosyntax.Canonical
		    Data.Morphosyntax.Class
		    Data.Morphosyntax.Raw
		    Data.Morphosyntax.Tagset
		    Data.Morphosyntax.Compare
		    Data.Morphosyntax.Sync
		    Text.Morphosyntax.Plain
		    Text.Morphosyntax.Tag
		    Text.Morphosyntax.Tagset
Build-Depends:      base
                  , containers
                  , text
                  , parsec
                  , binary
		  , mtl
