Name:               morphosyntax
Version:            0.0.1.2
Synopsis:           Morphosyntax layer
License:            BSD3
License-file:       LICENSE
Author:             Jakub Waszczuk
Maintainer:         waszczuk.kuba@gmail.com
Build-type:         Simple
Exposed-modules:    Data.Morphosyntax
                    Data.Morphosyntax.Canonical
		    Data.Morphosyntax.Tagset
		    Data.Morphosyntax.Compare
		    Data.Morphosyntax.Sync
		    Text.Morphosyntax.Plain
		    Text.Morphosyntax.Tag
		    Text.Morphosyntax.Tagset
		    Text.Morphosyntax.TeiNCP
Build-Depends:      base
                  , containers
                  , text
                  , bytestring
                  , parsec
		  , mtl
		  , binary
		  , polysoup
		  , tar (== 0.3.*)
		  , zlib
		  , filepath
